--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ Unknown = otherwise
       </tr>
       <tr>
        <td style="text-align:left;">6</td>
-       <td style="text-align:left;"><code>PINRequired</code></td>
+       <td style="text-align:left;"><code>SupportsAirPlayFromCloud</code></td>
        <td style="text-align:left;"></td>
       </tr>
       <tr>
