--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <li><a href="#passwordprotection">7. Password Protection</a></li>
         <li><a href="#contributing">8. Contributing</a></li>
         <li><ul>
-          <li><a href="#contributing">8.1. Device Data</a></li>
+          <li><a href="#contributing-data">8.1. Device Data</a></li>
           <li><ul>
-            <li><a href="#contributing">8.1.1. Linux</a></li>
-            <li><a href="#contributing">8.1.2. macOS</a></li>
+            <li><a href="#contributing-data-linux">8.1.1. Linux</a></li>
+            <li><a href="#contributing-data-macos">8.1.2. macOS</a></li>
           </ul></li>
         </ul></li>
         <li><a href="#history">9. History</a></li>
