Fix AirServer features

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ txt:
             <option value="0x445C0A00,  0x1C340">Libretone LTH200</option>
             <option value="0x445F8A00,  0x1C340">Sonos Beam</option>
             <option value="0x445F8A00,  0x1C340">Sonos One</option>
-            <option value=" 0x4155FDE,      0xE">AirServer</option>
+            <option value="0x4A7FFFF7,      0xE">AirServer</option>
             <option value="0x5A7FFFF7,     0x1E">Airplay</option>
             <option value="0x40180200,    0x300">Required for multi-room audio</option>
           </select>
